<resources>
    <string name="app_name">Wuthering Waves Waveplate Calculator</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="use40">40개 사용하기</string>
    <string name="use60">60개 사용하기</string>
    <string name="use_yellow">결정 용제 사용하기</string>
    <string name="init">init</string>
    <string name="count_waveplate">결정 플레이트 갯수</string>
    <string name="next_charge_time">다음 충전 시간 (mm:ss)</string>
    <string name="confirm">설정하기</string>
</resources>