<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_margin="8dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".InitActivity">

    <EditText
            android:id="@+id/init_waveplate_edit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/count_waveplate"
            android:hint="@string/count_waveplate"
            android:inputType="number"/>

    <EditText
            android:id="@+id/init_nextcharge_edit"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/next_charge_time"
            android:hint="@string/next_charge_time"
            android:inputType="time"/>

    <Button
            android:id="@+id/init_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"/>

</LinearLayout>