<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/open_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/init"/>

    <LinearLayout
            android:layout_weight="10"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_margin="32.5dp"
                android:layout_width="75dp"
                android:layout_height="75dp" app:srcCompat="@drawable/waveplate"
                android:id="@+id/imageView2" tools:layout_editor_absoluteY="284dp" tools:layout_editor_absoluteX="-2dp"/>

        <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="30sp"
                    android:id="@+id/plateView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/leftTimeView"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_weight="1" android:layout_width="match_parent" android:layout_height="0dp"/>

    <LinearLayout
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_margin="10dp"
                android:id="@+id/use40Button"
                android:text="@string/use40"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="75dp"/>

        <Button
                android:layout_margin="10dp"
                android:id="@+id/use60Button"
                android:text="@string/use60"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="75dp"/>

    </LinearLayout>

    <Button
            android:layout_margin="10dp"
            android:id="@+id/charge60Button"
            android:text="@string/use_yellow"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

</LinearLayout>